--- a/index.html
+++ b/index.html
@@ -2,12 +2,42 @@
 <html>
 <head>
 	<title> Marcus Kho </title>
-<link rel="stylesheet" href="css/style.css">
-
+	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
 </head>
 
+
 <body>
+<header>
 	<h1>Marcus Kho</h1>
+
+	<p><a class="font" href="index.html">About Me</a> | <a href="portfolio.html">Portfolio</a></p>
+
+
+</div>
+   	
+
+</header>
+	
+
+
+<div class="about">
+	<img src="images/me.jpg" alt="profile pic">
+	<h3>I enjoy life</h3>
+	<p>I'm Joe Johnson, a Developer based in NYC. I have ten years of experience in the graphic design world, specializing in the creation of responsive websites.</p>
+
+</div>
+
+<footer>
+
+	<p>Copyright 2017</p>
+
+	<p>
+		<a class="bottom" href="https://www.facebook.com/"target="_blank" >Facebook</a> | <a class="bottom" href="#"target="_blank">Instagram</a> | <a class="bottom" href="#"target="_blank">Linkedin</a> | <a class="bottom" href="#"target="_blank">Twitter</a>
+
+	</p>
+
+</footer>
 
 </body>
 </html>
