--- a/project3.html
+++ b/project3.html
@@ -15,15 +15,14 @@
    
 </header>
 
-<div id="imagelist">
-	<a href="project1.html"><img src="images/image1.jpg"></a>
-	<a href="project2.html"><img src="images/image2.jpg"/></a>
-	<a href="project3.html"><img src="images/image3.jpg"/></a>
+<div class="container">
+	<div class="top-left">Singapore</div>
+	<img src="images/image3a.jpg" style="width:90%;">
 	
 </div>
 
 
-   <footer>
+<footer>
 
 	<p>Copyright 2017</p>
 
@@ -33,3 +32,4 @@
 	</p>
 
 </body>
+</html>
