--- a/project2.html
+++ b/project2.html
@@ -17,7 +17,7 @@
 
 <div class="container">
 	<div class="top-left">New York</div>
-	<img src="images/image2a.jpg" style="width:90%;">
+	<img src="images/image2a.jpg" alt="New york" style="width:90%;">
 	
 </div>
 
