--- a/project3.html
+++ b/project3.html
@@ -17,7 +17,7 @@
 
 <div class="container">
 	<div class="top-left">Singapore</div>
-	<img src="images/image3a.jpg" style="width:90%;">
+	<img src="images/image3a.jpg" alt="Singapore" style="width:90%;">
 	
 </div>
 
