--- a/portfolio.html
+++ b/portfolio.html
@@ -1,35 +1,89 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 	<title> Marcus Kho </title>
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+
 </head>
 
 
 <body>
-<header>
-	<h1>Marcus Kho</h1>
+	<nav>
+		<ul class="main">
+		  <li><a href="About.html">About</a></li>
+		  <li><a href="Work.html">Works</a></li>
+		  <li><a href="#">Contact</a></li>
+		  <span class="logo"><a href="portfolio.html">Kho</a>.</span>
+		  <!-- <a href="portfolio.html" class="logo"> <img class="logo" src="images/logo.png"></a> -->
+		</ul>
+	</nav>
 
-	<p><a href="index.html">About Me</a> | <a class="font" href="portfolio.html">Portfolio</a></p>
-   
-</header>
 
-<div id="imagelist">
-	<a href="project1.html"><img src="images/image1.jpg"></a>
-	<a href="project2.html"><img src="images/image2.jpg"/></a>
-	<a href="project3.html"><img src="images/image3.jpg"/></a>
-	
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  
+
+  <div class="carousel-inner">
+
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="images/mainRewards.jpg" alt="First slide">
+       	<div class="carousel-caption d-none d-md-block">
+		    <h5>Design for delight<span style="color:#A3C3E7">.</span></h5>
+		    <p>Rewards Redesign • 2017</p>
+		   	<form>
+				<input class="viewButton" type="button" value="View project" onclick="window.location.href='project1.html'" />
+			</form>
+
+			
+
+  		</div>
+  	</div>
+
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/mainPromos.jpg" alt="Second slide">
+      	<div class="carousel-caption d-none d-md-block">
+		    <h5>Design for simplicity</h5>
+		    <p>Promotion Builder • 2016</p>
+		    <form>
+				<input class="viewButton" type="button" value="View project" onclick="window.location.href='Work.html'" />
+			</form>
+  		</div>
+    </div>
+
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/mainReward2.jpg" alt="Third slide">
+	      <div class="carousel-caption d-none d-md-block">
+			    <h5>Design for context</h5>
+			    <p>GrabPay Rewards • 2018</p>
+			    <button class="viewProject-btn">View project</button>
+	  		</div>
+    </div>
+  </div>
+
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
 
-   <footer>
-
-	<p>Copyright 2017</p>
-
-	<p>
-		<a class="bottom" href="https://www.facebook.com/"target="_blank" >Facebook</a> | <a class="bottom" href="#"target="_blank">Instagram</a> | <a class="bottom" href="#"target="_blank">Linkedin</a> | <a class="bottom" href="#"target="_blank">Twitter</a>
-
-	</p>
-
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
+
+</html>
+
